Bug 36618 - [Qt] LayoutTests/http/tests/appcache/fallback.html crashes
Summary: [Qt] LayoutTests/http/tests/appcache/fallback.html crashes
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Platform (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC Linux
: P2 Normal
Assignee: Chang Shu
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-03-25 14:01 PDT by Chang Shu
Modified: 2010-07-02 04:43 PDT (History)
4 users (show)

See Also:


Attachments
fix patch (1.15 KB, patch)
2010-03-25 14:11 PDT, Chang Shu
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chang Shu 2010-03-25 14:01:33 PDT
The above test case crashes, which blocks the effort to make it work.
Comment 1 Chang Shu 2010-03-25 14:11:57 PDT
Created attachment 51674 [details]
fix patch
Comment 2 Laszlo Gombos 2010-03-25 14:22:54 PDT
It would be good to have a patch that fixes the bug entirely and not just partial fix, or alternatively find a test case that this patch fixes.
Comment 3 Eric Seidel (no email) 2010-03-26 00:58:47 PDT
Comment on attachment 51674 [details]
fix patch

looks sane.
Comment 4 WebKit Commit Bot 2010-03-26 08:23:02 PDT
Comment on attachment 51674 [details]
fix patch

Clearing flags on attachment: 51674

Committed r56627: <http://trac.webkit.org/changeset/56627>
Comment 5 WebKit Commit Bot 2010-03-26 08:23:06 PDT
All reviewed patches have been landed.  Closing bug.
Comment 6 Simon Hausmann 2010-07-02 04:43:39 PDT
Revision r56627 cherry-picked into qtwebkit-2.0 with commit 2342eb0ade5ebbd34db451760e5c6e55c0b47159