2010-03-26  Shu Chang  <chang.shu@nokia.com>

Reviewed by Eric Seidel.

        [Qt] Prevent referring d->m_job in the future because calling abort()
        deletes the instance itself.
        https://bugs.webkit.org/show_bug.cgi?id=36618

        Test: http/tests/appcache/fallback.html

        * platform/network/qt/ResourceHandleQt.cpp:
        (WebCore::ResourceHandle::cancel):

Canonical link: https://commits.webkit.org/47921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@56627 268f45cc-cd09-0410-ab3c-d52691b4dbfc